# spot_cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  cmake_install.cmake  generate_protos.sh
cmake/: FindCairo.cmake
examples/bodytrack/: CMakeLists.txt  bodytrack.cpp
examples/bodytrack/include/: bodytrack.h
examples/display/: CMakeLists.txt
examples/display/include/: display.h
examples/teleop/: CMakeLists.txt  spot_teleop.cpp
examples/teleop/include/: spot_teleop.h
include/spot/: BaseClient.h  ClientHandler.h  auth.h  auth_client.h  base.h  base_client.h  client_handler.h  common.h  core_layer.h  directory.h  directory_client.h  directory_registration.h  display.h  estop.h  estop_client.h  exception.h  frame.h  image.h  image_client.h  lease.h  lease_client.h  local_grid.h  math.h  power.h  power_client.h  robot.h  robot_command.h  robot_command_client.h  robot_id.h  robot_id_client.h  robot_layer.h  robot_state.h  robot_state_client.h  spot.h  spot_check.h  spot_check_client.h  time_sync.h  time_sync_client.h  timesync.h  trajectory.h  (+1 more)
include/spot/clients/: auth.h  base.h  directory.h  directory_registration.h  estop.h  image.h  lease.h  local_grid.h  power.h  robot_command.h  robot_id.h  robot_state.h  spot_check.h  timesync.h  world_objects.h
rospkgs/spot_cpp_node/include/: helpers.h  spot_ros_cpp.h
rospkgs/spot_cpp_node/src/: helpers.cpp  spot_ros_cpp.cpp
rospkgs/spot_frame/: CMakeLists.txt  package.xml
rospkgs/spot_frame/include/spot_frame/: pose_recipient.h  spot_frame.h  tf_broadcast_pr.h
rospkgs/spot_frame/src/: spot_frame.cpp  tf_broadcast_pr.cpp
rospkgs/spot_node/: CMakeLists.txt  README  package.xml
rospkgs/spot_node/include/spot_node/: spot_node.h
rospkgs/spot_node/src/: spot_node.cpp
rospkgs/spot_ros_cpp/: CMakeLists.txt  package.xml
rospkgs/spot_ros_cpp/include/: spot_ros_cpp.h
rospkgs/spot_ros_cpp/src/: helpers.cpp  spot_ros_cpp.cpp
rospkgs/spot_twist/: CMakeLists.txt  package.xml
rospkgs/spot_twist/include/spot_twist/: spot_twist.h
rospkgs/spot_twist/src/: spot_twist.cpp
src/: ClientHandler.cpp  auth.cpp  auth_client.cpp  client_handler.cpp  core_layer.cpp  directory.cpp  directory_client.cpp  directory_registration.cpp  display.cpp  estop.cpp  estop_client.cpp  exception.cpp  frame.cpp  image.cpp  image_client.cpp  lease.cpp  lease_client.cpp  local_grid.cpp  math.cpp  power.cpp  power_client.cpp  robot.cpp  robot_command.cpp  robot_command_client.cpp  robot_id.cpp  robot_id_client.cpp  robot_layer.cpp  robot_state.cpp  robot_state_client.cpp  server.cpp  spot.cpp  spot_check.cpp  spot_check_client.cpp  time_sync.cpp  time_sync_client.cpp  timesync.cpp  trajectory.cpp  utils.cpp
src/clients/: auth.cpp  directory.cpp  directory_registration.cpp  estop.cpp  image.cpp  lease.cpp  local_grid.cpp  power.cpp  robot_command.cpp  robot_id.cpp  robot_state.cpp  spot_check.cpp  timesync.cpp  world_objects.cpp
